# controlcenter

./: .hgtags  Makefile.in  cc.Rc  cc.c  cc.def  cc.h  ccw.rc  config.h  configure  configure.in  makefile.b32  makefile.emx  makefile.vac  makefile.vc  readme.txt  si2.h  si2.lib  stats.h  statsos2.c  statsunx.c  statswin.c
gtk/: cc.gresource.xml  cc.xpm  resources.c  resources.sh
install/: cc-x64.nsi  cc-x86.nsi  cc.cfg  cc.wis
install/scripts/: license.txt
mac/: Control Center.icns  Info.plist  installer.sh
win/: cc.exe.x64.manifest  cc.exe.x86.manifest
